# coding-challenges

android/BbasicMailCleaner/: settings.gradle
android/BbasicMailCleaner/app/: build.gradle
android/BbasicMailCleaner/app/src/androidTest/java/com/example/bbasicmailcleaner/: ExampleInstrumentedTest.java
android/BbasicMailCleaner/app/src/main/: AndroidManifest.xml
android/BbasicMailCleaner/app/src/main/java/com/example/bbasicmailcleaner/: FirstFragment.java  MailCleanerService.java  MainActivity.java
android/BbasicMailCleaner/app/src/main/res/layout/: fragment_first.xml
android/BbasicMailCleaner/app/src/main/res/menu/: menu_main.xml
android/BbasicMailCleaner/app/src/main/res/navigation/: nav_graph.xml
android/BbasicMailCleaner/app/src/main/res/values/: strings.xml
android/BbasicMailCleaner/gradle/wrapper/: gradle-wrapper.properties
android/NativeSearchList/: settings.gradle
android/NativeSearchList/app/: build.gradle
android/NativeSearchList/app/src/main/: AndroidManifest.xml
android/NativeSearchList/app/src/main/cpp/: ArraysStrings.cpp  ArraysStrings.h  CMakeLists.txt  native-lib.cpp
android/NativeSearchList/app/src/main/res/layout/: activity_main.xml  listview.xml
android/NativeSearchList/app/src/main/res/values/: strings.xml
android/NativeSearchList/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt
cpp/arrays-and-strings/: 001-inplace-char-replacement.cpp  002-word-jumbled-letters.cpp  003-words-with-typos.cpp
cpp/linked-lists/: 001-remove-duplicates.cpp
cpp/utils/inc/: linked-list.h
(+4 files in other folders)
